--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 	<header>
 		<a href ="index.html" class="logo">A<span>N</span>V<span>L</span></a>
 		<nav>
-       			<a href="demo.html">DEMO</a>
-            		<a href="pro.html">PRODUCTS</a>
-			<a href="fac.html">FACILITIES</a>
-       			<a href="ser.html">SERVICES</a>
+			<input type="checkbox" id="check">
+    			<label for="check" class="checkbtn">
+     				<i class="fas fa-bars"></i>
+    			</label>
+       			<ul>
+      				<li><a href="demo.html">DEMO</a></li>
+            			<li><a href="pro.html">PRODUCTS</a></li>
+				<li><a href="fac.html">FACILITIES</a></li>
+       				<li><a href="ser.html">SERVICES</a></li>
+			 </ul>
   		</nav>
 	</header>
 	<section class="home">
@@ -30,7 +36,7 @@
 				<a href=""><i class="fa-solid fa-phone"></i>
 				<a href="https://www.google.com/maps/@25.3735728,86.4869343,3a,75y,18.02h,84.92t/data=!3m7!1e1!3m5!1s5Po-c7C-AxpSFEt3Wh9vvw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D5.075505918987645%26panoid%3D5Po-c7C-AxpSFEt3Wh9vvw%26yaw%3D18.016135487938943!7i13312!8i6656?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="fa-solid fa-location-dot"></i>
 			</div>
-			
+			<br><br><br><br><br>
 			<a href="#" class="btn">BOOK ME</a>
             	</div>
 	</section>
